--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^29.5.1",
     "@types/supertest": "^2.0.12",
+    "axios": "^1.3.6",
     "express": "^4.18.2",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
