--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
   "license": "MIT",
   "scripts": {
     "dev": "npx nodemon --exec ts-node src/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack"
   },
   "dependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
     "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
     "@types/supertest": "^2.0.12",
     "axios": "^1.3.6",
@@ -20,6 +26,12 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "ts-loader": "^9.4.2",
     "typescript": "^5.0.4"
   }
 }
