--- a/package.json
+++ b/package.json
@@ -18,11 +18,18 @@
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
     "axios": "^1.3.6",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jest": "^29.5.0",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
