--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-typescript": "^7.21.4",
     "@types/axios": "^0.14.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
     "@types/jsonwebtoken": "^9.0.2",
@@ -23,10 +24,13 @@
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
     "axios": "^1.3.6",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "http": "^0.0.1-security",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
+    "node-localstorage": "^2.2.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
